@@ -1,0 +1,37 @@
+#!/bin/sh
+# $Id$
+
+if [ -z "$RPM_BUILD_ROOT" ]; then
+    echo "No build root defined" >&2
+    exit 1
+fi
+
+if [ ! -d "$RPM_BUILD_ROOT" ]; then
+    echo "Invalid build root" >&2
+    exit 1
+fi
+
+SEARCH_DIRS="$(for i in `gcc -print-search-dirs|grep "libraries: ="| cut -d= -f2|sed -e 's#:# #g'`; do [ -d "$i" ] && (cd $i; echo $PWD); done|sort -u)"
+PKG_CONFIG="$(find "$RPM_BUILD_ROOT"/usr/lib*/pkgconfig -name \*.pc)"
+
+find "$RPM_BUILD_ROOT" -type f -name \*.la -print0 |
+xargs  --no-run-if-empty -0 file -N |
+grep "libtool library file" |
+sed -e 's#: libtool library file.*##g' |
+while read path; do
+    statlib="${path/%.la/.a}"
+    KEEP=0
+    # only .la files found in library search path might be allowed to exist
+    for dir in $SEARCH_DIRS; do
+	if [ "`dirname $path`" == "${RPM_BUILD_ROOT}${dir}" ]; then
+	    # if package has a static library without any pkg-config file, we keep .la file
+	    if [[ -z "$PKG_CONFIG" && -f "$statlib" ]]; then
+		KEEP=1
+	    fi
+	    # TODO: other special cases?
+	fi
+    done
+    if [ $KEEP -eq 0 ]; then
+	rm -f "$path"
+    fi
+done
