@@ -13,6 +13,7 @@
     %{?!dont_translate_menu: [ -n "$DONT_TRANSLATE_MENU" ] || %_spec_helper_dir/translate_menu} \
     %{?!dont_fix_pamd:       [ -n "$DONT_FIX_PAMD_CONFIGS" ] || %_spec_helper_dir/fix_pamd} \
     %{?!dont_remove_info_dir: [ -n "$DONT_REMOVE_INFO_DIR" ] || %_spec_helper_dir/remove_info_dir} \
+    %{?!dont_remove_libtool_files: [ -n "$DONT_REMOVE_LIBTOOL_FILES" ] || %_spec_helper_dir/remove_libtool_files} \
     %{?!dont_fix_eol:         [ -n "$DONT_FIX_EOL" ]        || %_spec_helper_dir/fix_eol} \
     %{?!dont_check_elf_files: [ -n "$DONT_CHECK_ELF_FILES" ] || %_spec_helper_dir/check_elf_files} \
     %{?!__debug_package:      [ -n "%{?dont_strip:1}%{?!dont_strip:$DONT_STRIP}" ] || export DISABLE_DEBUG=1 && %__debug_install_post} \
